k8s/ui/oauth2-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth-proxy
  name: oauth-proxy
  namespace: ui
spec:
  type: ClusterIP
  selector:
    app: oauth-proxy
  ports:
    - name: http-oauthproxy
      port: 4180
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth-proxy
  name: oauth-proxy
  namespace: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "oauth-proxy"
  template:
    metadata:
      labels:
        app: oauth-proxy
    spec:
      containers:
        - name: oauth-proxy
          image: "quay.io/oauth2-proxy/oauth2-proxy:latest"
          ports:
            - containerPort: 4180
          args:
            - --provider=google
            - --upstream=http://ui-server:8080
            - --http-address=0.0.0.0:4180
            - --client-id=$(OAUTH_CLIENT_ID)
            - --client-secret=$(OAUTH_CLIENT_SECRET)
            - --cookie-secret=$(OAUTH_COOKIE_SECRET)
            - --email-domain=$(OAUTH_EMAIL_DOMAINS)
---
